지윤 : index.jsp, agency.css 수정 (191008)

--- a/src/main/webapp/resources/css/agency.css
+++ b/src/main/webapp/resources/css/agency.css
@@ -683,7 +683,9 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 }
 
 
-/*지윤 추가*/
+
+
+/*191008 지윤 추가*/
 #custom-search-input{
     
     border-radius: 10px;
